Removed tap effect

--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: #202030;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .navbar {
