--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -112,6 +112,7 @@ body {
         width: 100%;
         border-radius: 0px 0px 0px 25px;
         padding-left: 20px;
+        overflow-y: scroll;
     }
     .navbar a:not(:first-child) {
         display: none;
