--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -201,7 +201,6 @@ body {
     }
     .slideText {
         width: 100%;
-        top: 45px;
     }
 }
 
@@ -210,6 +209,9 @@ body {
         left: 0;
         border-radius: 0;
     }
+    .thumbcontainer {
+        display: none;
+    }
 }
 
 @media screen and (max-height: 400px) { /*Media query responsiveness for thin viewport such as a mobile phone in horizontal view*/
@@ -217,7 +219,7 @@ body {
         top: 85px;
     }
     .slideText {
-        top: 20px;
+        top: 85px;
     }
     .navbar {
         overflow: visible;
@@ -251,7 +253,7 @@ body {
         z-index: 11;
         left: 215px;
         width: 100%;
-        height: 250px;
+        height: 175px;
         border-radius: 0px 0px 0px 25px;
         padding-left: 20px;
         overflow-y: scroll;
@@ -263,6 +265,5 @@ body {
     .innernav {
             left: 0;
             border-radius: 0;
-            height: 175px;
     }
 }
