--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -218,7 +218,7 @@ body {
     }
 }
 
-@media screen and (max-height: 400px) { /*Media query responsiveness for thin viewport such as a mobile phone in horizontal view*/
+@media screen and (max-height: 400px) and (max-width: 877px) { /*Media query responsiveness for thin viewport such as a mobile phone in horizontal view*/
     .slideshow {
         top: 85px;
     }
