--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -5,6 +5,39 @@ body {
     -webkit-tap-highlight-color: transparent;
     margin: 0;
     background-color: white;
+    overflow-x: hidden;
+}
+
+main {
+    max-width: 1440px;
+    margin: auto;
+    height: auto;
+    position: relative;
+    top: 90px;
+}
+
+h1 {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Cabin', sans-serif;
+    color: #800080;
+}
+
+h2 {
+    font-size: 30pt;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: #5c005c;
+}
+
+p {
+    font-size: 20pt;
+    margin-top: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: #5c005c;
 }
 
 .navbar {
@@ -67,31 +100,18 @@ body {
 .navbar .resIcon {
     display: none;
 }
-
-.content {
-    max-width: 1440px;
-    margin: auto;
-    overflow: visible;
-    height: auto;
-    position: relative;
-    top: 85px;
-}
-
+    
 .title {
-    overflow: auto;
     text-align: center;
-}
-
-.title h1 {
-    font-family: 'Cabin', sans-serif;
     position: relative;
     overflow: hidden;
-    color: purple;
 }
 
-.title h1:before {
-    margin-left: -50%;
-    text-align: right;
+.mainText {
+    width: 50%;
+    height: auto;
+    position: relative;
+    float: left;
 }
 
 .slideshow {
@@ -130,22 +150,7 @@ body {
     width: 100%;
     height: auto;
     float: right;
-    color: #5c005c;
-    font-family: 'Roboto', sans-serif;
     text-align: left;
-}
-
-.slideText h1 {
-    font-size: 30pt;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.slideText p {
-    font-size: 20pt;
-    margin-top: 0;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .buyBtn {
@@ -164,19 +169,6 @@ body {
 
 .buyBtn:hover {
     color: black;
-}
-
-.fullWidthBg{
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    height: 100%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    background-color: lightgray;
-    z-index: -1;
-    box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
 }
 
 .prevSlide, .nextSlide {
@@ -226,6 +218,15 @@ body {
     opacity: 100%;
 }
 
+.fullWidthBg{
+    height: 100%;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+    background-color: lightgray;
+    z-index: -1;
+    box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
+}
+
 .fade-in-transition {
     animation-name: fadeTransition;
     animation-duration: 0.5s;
@@ -241,18 +242,21 @@ body {
 }
 
 @media screen and (max-width: 1341px) { /*Media query responsiveness for laptops and or large tablet screens (Docking the navbar in place)*/
+    h1 {
+        font-size: 20pt;
+    }
+    h2 {
+        font-size: 24pt;
+    }
+    p {
+        font-size: 18pt;
+    }
     .innernav {
         float: right;
         margin-left: 0;
     }
     .slideshow {
         height: 440px;
-    }
-    .slideText h1 {
-        font-size: 24pt;
-    }
-    .slideText p {
-        font-size: 18pt;
     }
 }
 
@@ -292,6 +296,9 @@ body {
         display: block;
         text-align: left;
     }
+    .mainText {
+        width: 100%;
+    }
     .slideshow {
         height: 500px;
     }
@@ -300,6 +307,7 @@ body {
     }
     .slideTxtContainer {
         width: 100%;
+        height: auto;
     }
     .buyBtn {
         display: none;
@@ -307,6 +315,15 @@ body {
 }
 
 @media screen and (max-width: 500px) { /*Media query responsiveness for tall screens such as mobile phones in vertical view*/
+    h1 {
+        font-size: 15pt;
+    }
+    h2 {
+        font-size: 16pt;
+    }
+    p {
+        font-size: 14pt;
+    }
     .innernav {
         left: 0;
         border-radius: 0;
@@ -317,51 +334,32 @@ body {
     .slideshow {
         height: 300px;
     }
-    .slideText h1 {
-        font-size: 16pt;
-    }
-    .slideText p {
-        font-size: 14pt;
-    }
 }
 
 @media screen and (max-height: 400px) and (max-width: 877px) { /*Media query responsiveness for thin viewport such as a mobile phone in horizontal view*/
+    main {
+        top: 85px;
+    }
     .navbar {
         overflow: visible;
+    }
+    .innernav {
+        display: none;
+        width: 100%;
+        height: 175px;
+        overflow-y: scroll;
+        top: 57px;
     }
     .navbar img {
         height: 75px;
     }
     .navbar a.resIcon {
-        float: right;
-        display: block;
-        position: absolute;
-        top: 19px;
-        right: 10px;
-        z-index: 12;
-    }
-    .navbar.resNav a{
-        float: none;
-        display: block;
-        text-align: left;
+        top: 16px;
     }
     .navbar.resNav .innernav {
         display: block;
     }
     .resIcon img {
         height: 40px;
-    }
-    .innernav {
-        display: none;
-        position: absolute;
-        background-color: purple;
-        z-index: 11;
-        left: 215px;
-        width: 100%;
-        height: 175px;
-        border-radius: 0px 0px 0px 25px;
-        padding-left: 20px;
-        overflow-y: scroll;
-        top: 57px;
     }
 }
