--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -210,6 +210,10 @@ p {
     float: right;
 }
 
+.slideTxtContainer:first-child {
+    display: block;
+}
+
 .slideText {
     display: none;
     width: 100%;
