--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -283,13 +283,25 @@ p {
     opacity: 1;
 }
 
-.fullWidthBg{
+.fullWidthBg {
     height: 100%;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     background-color: lightgray;
     z-index: -1;
     box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
+}
+
+.prodName {
+    
+}
+
+.prodPrice {
+
+}
+
+.prodDate {
+
 }
 
 .footer {
