--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -292,18 +292,17 @@ p {
     box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
 }
 
+#productList:last-child {
+    margin: 30px;
+}
+
+#productList:first-child h1 {
+    margin-top: 0;
+}
+
 .prodContainer {
     width: 100%;
     overflow: auto;
-}
-
-.prodContainer:first-of-type {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-.prodContainer:last-of-type {
-    margin-bottom: 30px;
 }
 
 .prodName {
