--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -437,7 +437,12 @@ p {
         padding-bottom: 0;
     }
     .prodText {
+        width: 100%;
         padding-bottom: 30px;
+    }
+    .prodName {
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
     }
 }
 
