--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -320,6 +320,8 @@ p {
 
 .prodPrice {
     float: right;
+    bottom: 0;
+    right: 0;
     margin-right: 20px;
     color: white;
     background-color: purple;
@@ -329,6 +331,8 @@ p {
 
 .prodDate {
     float: left;
+    bottom: 0;
+    left: 0;
     margin-left: 20px;
     color: white;
     background-color: purple;
