--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -336,6 +336,12 @@ p {
     padding: 5px;
 }
 
+.prodImage {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .footer {
     position: absolute;
     right: 0;
