--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -344,7 +344,7 @@ p {
 
 .prodInfo {
     position: absolute;
-    left: 0;
+    bottom: 0;
     right: 0;
     margin-right: 20px;
     margin-bottom: 20px;
