--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -296,6 +296,7 @@ p {
     width: 100%;
     overflow: auto;
     padding-bottom: 32px;
+    height: 500px;
 }
 
 .prodContainer .prodText:first-of-type .prodName {
@@ -313,7 +314,8 @@ p {
 
 .prodText {
     width: 50%;
-    height: 500px;
+    height: auto;
+    position: relative;
     float: left;
 }
 
@@ -338,7 +340,7 @@ p {
 .prodImage {
     display: block;
     width: 100%;
-    height: 500px;
+    height: 100%;
 }
 
 .prodInfo {
