--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -309,10 +309,11 @@ p {
 .prodName {
     background-color: lightgray;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 .prodText.open .prodName {
-    margin-bottom: initial;
+    margin-bottom: 20px;
 }
 
 .prodText {
