--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -308,6 +308,8 @@ p {
 
 .prodName {
     background-color: lightgray;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-top: 0;
     margin-bottom: 0;
 }
