--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -467,7 +467,7 @@ p {
     }
     .prodText {
         width: 100%;
-        padding-bottom: 30px;
+        margin-bottom: 30px;
     }
     .prodName {
         border-top-left-radius: 10px;
