--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -524,11 +524,11 @@ p {
     .thumbcontainer {
         display: none;
     }
-    .slideshow, .prodImage {
+    .slideshow {
         height: 300px;
     }
-    .prodTxtContainer {
-        height: 350px;
+    .prodTxtContainer, .prodImage {
+        height: 325px;
     }
     .prodInfo {
         padding: 5px;
