--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -7,7 +7,7 @@ body {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent;
     margin: 0;
-    background-color: white;
+    background-color: #ffffff;
     overflow-x: hidden;
     height: 100%;
 }
@@ -30,7 +30,7 @@ h2 {
 h3 {
     font-size: 10pt; 
     font-family: 'Roboto', sans-serif;
-    color: white;
+    color: #ffffff;
     font-weight: unset;
     margin: 3px;
 }
@@ -45,7 +45,7 @@ p {
 }
 
 .navbar {
-    background-color: purple;
+    background-color: #800080;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -83,7 +83,7 @@ p {
 .navbar a {
     float: left;
     display: block;
-    color: white;
+    color: #ffffff;
     text-align: center;
     text-decoration: none;
     padding: 10px;
@@ -94,11 +94,11 @@ p {
 }
 
 .navbar a:hover {
-    color: black;
+    color: #000000;
 }
 
 .navbar a.active {
-    color: black;
+    color: #000000;
 }
 
 .navbar .resIcon {
@@ -147,7 +147,7 @@ p {
     font-size: 20pt;
     padding: 5px;
     font-family: 'Roboto', sans-serif;
-    background-color: lightgray;
+    background-color: #d3d3d3;
     border-radius: 5px;
     border: none;
 }
@@ -171,7 +171,7 @@ p {
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 18pt;
-    color: white;
+    color: #ffffff;
     background-color: #800080;
     border-radius: 5px;
     border: none;
@@ -223,7 +223,7 @@ p {
 
 .buyBtn, .prodInfo {
     cursor: pointer;
-    background-color: purple;
+    background-color: #800080;
     border-radius: 10px;
     position: absolute;
     bottom: 0;
@@ -232,7 +232,7 @@ p {
     margin: 30px;
     font-size: 18pt;
     font-family: 'Cabin', sans-serif;
-    color: white;
+    color: #ffffff;
 }
 
 .buyBtn:hover, .prodInfo:hover {
@@ -272,7 +272,7 @@ p {
     padding-bottom: 5px;
     margin: 5px;
     margin-bottom: 0px;
-    background-color: white;
+    background-color: #ffffff;
     opacity: .75;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -290,7 +290,7 @@ p {
     height: 100%;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
-    background-color: lightgray;
+    background-color: #d3d3d3;
     z-index: -1;
     box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
 }
@@ -318,7 +318,7 @@ p {
 }
 
 .prodName {
-    background-color: lightgray;
+    background-color: #d3d3d3;
     padding-top: 5px;
     padding-bottom: 5px;
     margin-top: 0;
@@ -341,8 +341,8 @@ p {
 .prodPrice {
     float: right;
     margin-right: 20px;
-    color: white;
-    background-color: purple;
+    color: #ffffff;
+    background-color: #800080;
     border-radius: 10px;
     padding: 5px;
 }
@@ -350,8 +350,8 @@ p {
 .prodDate {
     float: left;
     margin-left: 20px;
-    color: white;
-    background-color: purple;
+    color: #ffffff;
+    background-color: #800080;
     border-radius: 10px;
     padding: 5px;
 }
@@ -373,7 +373,7 @@ p {
     left: 0;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
-    background-color: purple;
+    background-color: #800080;
     text-align: center;
     padding: 5px;
 }
@@ -427,7 +427,7 @@ p {
     }
     .innernav {
         position: absolute;
-        background-color: purple;
+        background-color: #800080;
         z-index: 11;
         left: 215px;
         top: 62px;
