--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -366,6 +366,13 @@ p {
     margin: 20px;
 }
 
+.repImg {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    margin-left: -50%;
+}
+
 .footer {
     position: absolute;
     right: 0;
