--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -370,8 +370,7 @@ p {
     position: relative;
     max-width: 100%;
     max-height: 100%;
-    margin-left: -50%;
-    margin-right: -50%;
+    margin: auto;
 }
 
 .footer {
