--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -367,10 +367,12 @@ p {
 }
 
 .repImg {
+    display: block;
     position: relative;
     max-width: 100%;
     max-height: 100%;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer {
