--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -286,18 +286,21 @@ p {
     opacity: 1;
 }
 
+.homeBg {
+    display: block;
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
 .fullWidthBg {
     height: 100%;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     background-color: #d3d3d3;
     z-index: -1;
-    box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
-}
-
-.fullWidthImg {
-    height: 100%;
-    width: 100%;
     box-shadow: inset 0px 11px 8px -10px, inset 0 -11px 8px -10px;
 }
 
