--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -291,8 +291,7 @@ p {
     position: relative;
     max-width: 100%;
     max-height: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-radius: 10px;
 }
 
 .fullWidthBg {
