--- a/css/rfstyle.css
+++ b/css/rfstyle.css
@@ -287,11 +287,10 @@ p {
 }
 
 .homeBg {
-    display: block;
-    position: relative;
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 10px;
+    height: 100%;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+    z-index: -1;
 }
 
 .fullWidthBg {
